--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -1,17 +1,13 @@
 <div>
   <h2>Chat</h2>
   <div>
-    <form action="/upload" method="POST" enctype="multipart/form-data">
-      <input type="text" id="chatBox" />
-    </form>
-
-  </div>
-
-  <div>
-    <p id="messagesLogs"></p>
-  </div>
-
+    <input type="text" id="chatBox">
 </div>
+
+<div>
+    <p id="messagesLogs"></p>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script
   src="https://cdn.socket.io/4.7.3/socket.io.min.js"
