--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,4 +1,7 @@
 <h1>Productos</h1>
+<h2>Bienvenido {{userFirstName}} {{userLastName}}</h2>
+<p>Rol: {{rol}}</p>
+<a href="/api/sessions/logout">Logout</a>
 
 {{#each products}}
 
