--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -8,4 +8,5 @@
   <br />
   <button type="submit">Login</button>
   <a href="register">registrate</a>
+  <a href="/api/sessions/github"> Github </a>
 </form>
