--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,4 +1,35 @@
-<form action="/api/users" method="post">
+<div class="upload">
+  <form action="/api/users" method="POST" class="upload__container">
+    <h2>Registro</h2>
+
+    <div class="upload__container--title">
+      <input type="text" name="first_name" placeholder="Nombre" required />
+    </div>
+
+    <div class="upload__container--title">
+      <input type="text" name="last_name" placeholder="Apellido" required />
+    </div>
+
+    <div class="upload__container--title">
+      <input
+        type="text"
+        name="email"
+        placeholder="Correo electónico"
+        required
+      />
+    </div>
+
+    <div class="upload__container--title">
+      <input type="number" name="age" placeholder="Edad" required />
+    </div>
+
+    <div class="upload__container--title">
+      <input type="text" name="password" placeholder="Contraseña" required />
+    </div>
+
+    <button class="btn" type="submit">Registrarse </button>
+  </form>
+  {{! <form action="/api/users" method="post" class="upload__container">
   <label for="first_name">First Name:</label>
   <input type="text" id="first_name" name="first_name" required />
   <br />
@@ -15,4 +46,5 @@
   <input type="number" id="age" name="age" required />
   <br />
   <button type="submit">Register</button>
-</form>
+</form> }}
+</div>
