tercera entrega completa

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,7 +1,7 @@
 <h1>Login</h1>
 
 <div class="upload">
-  <form action="/api/sessions/login" method="POST" class="upload__container">
+  <form action="/api/users/login" method="POST" class="upload__container">
 
     <div class="upload__container--title">
       <input type="text" id="email" name="email" placeholder="Email" required />
@@ -24,7 +24,7 @@
       <div>
 
       </div>
-      <a href="/api/sessions/github"> Github </a>
+
     </div>
   </form>
 </div>
