--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,5 +1,5 @@
 <div class="upload">
-  <form action="/api/users" method="POST" class="upload__container">
+  <form action="/api/users/register" method="POST" class="upload__container">
     <h2>Registro</h2>
 
     <div class="upload__container--title">
@@ -29,22 +29,4 @@
 
     <button class="btn" type="submit">Registrarse </button>
   </form>
-  {{! <form action="/api/users" method="post" class="upload__container">
-  <label for="first_name">First Name:</label>
-  <input type="text" id="first_name" name="first_name" required />
-  <br />
-  <label for="last_name">Last Name:</label>
-  <input type="text" id="last_name" name="last_name" required />
-  <br />
-  <label for="email">Email:</label>
-  <input type="email" id="email" name="email" required />
-  <br />
-  <label for="password">Password:</label>
-  <input type="password" id="password" name="password" required />
-  <br />
-  <label for="age">Age:</label>
-  <input type="number" id="age" name="age" required />
-  <br />
-  <button type="submit">Register</button>
-</form> }}
 </div>
