desafio clase 39 completado y correcciones del desafío 34

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -19,8 +19,13 @@
 
     <div class="upload__container--title">
       <button type="submit" class="btn"> Iniciar Sesión </button>
+      <p>¿Olvidaste tu contraseña?</p>
+      <a href="/api/users/requestResetPassword">restablecer contraseña</a>
     </div>
     <div><a href="register">registrate</a>
+      <div>
+
+      </div>
 
     </div>
   </form>
