--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -22,7 +22,7 @@
     <a class="btn" href="/renderCart/{{cart}}">Mi carrito</a>
   {{else}}
     {{#unless isAdmin}}
-      <a class="btn" href="/renderCart{{cart}}">Mi carrito</a>
+      <a class="btn" href="/renderCart/{{cart}}">Mi carrito</a>
       <a class="btn" href="/chat">Chat en vivo</a>
       <a class="btn" href="/products">Tienda</a>
     {{/unless}}
